--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,10 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "6": "^0.0.1",
-    "dotenv": "^16.0.1",
     "express": "^4.17.3",
-    "mongoose": "^6.3.5",
+    "node": "^17.7.2",
     "nodemon": "^2.0.15"
-  },
-  "description": ""
+  }
 }
